# towr

.towr_ros_bk/include/towr_ros/: towr_ros_interface_v2.h  towr_user_interface.h
.towr_ros_bk/src/: towr_ros_app.cc  towr_ros_interface.cc
towr/: CMakeLists.txt
towr/include/towr/: nlp_formulation.h
towr/src/: biped_gait_generator.cc  gait_generator.cc  height_map.cc  height_map_examples.cc  monoped_gait_generator.cc  nlp_formulation.cc  parameters.cc  quadruped_gait_generator.cc
towr/test/: hopper_example2.cc  hopper_example2_bk.cc
towr_gui_eel/anim1/: main.py
towr_gui_eel/anim1/www/: index.html  main.js  nav.css  nav.js  style.css
towr_gui_eel/tutorial1/: main.py
towr_gui_eel/tutorial1/www/: index.html  index.js
towr_gui_kivy/: CMakeLists.txt  package.xml
towr_gui_kivy/msg/: TowrCommand2.msg  TowrCommandGUI.msg  TowrCommandSeq.msg
towr_gui_kivy/src/: TrajectoryGenerator_v2.1_walk.ipynb  TrajectoryGenerator_v2.ipynb  async.py  main.py  main2.py  main_bk.py  main_control.py  main_points.py  publish_test.ipynb  vis_pub_queue.py
towr_gui_kivy/src/.ipynb_checkpoints/: TrajectoryGenerator-v1-checkpoint.ipynb  TrajectoryGenerator_v2-checkpoint.ipynb
towr_gui_kivy/src/scripts/: merge_rosbag.py  shift_rosbag.py
towr_gui_kivy/src/tutorial/: draw.kv  draw.py  dynamic.py  eventloop.py  pong.kv  pong.py  pong_kb.py  pong_kb_dynamic.py  stress.py  test.py  undo.py
towr_gui_kivy/src/utils/: traj.py  waypoint.py
towr_ros/: CMakeLists.txt
towr_ros/include/towr_ros/: topic_names.h  towr_ros_interface.h  towr_ros_interface2.h  (+1 more)
towr_ros/launch/: towr_nodes2.launch  towr_nodes_seq.launch  towr_ros.launch  towr_ros2.launch  towr_ros_seq.launch
towr_ros/msg/: TowrCommandSeq.msg
towr_ros/rviz/: xpp_towr.rviz
towr_ros/src/: towr_ros_app.cc  towr_ros_app2.cc  towr_ros_app_seq.cc  towr_ros_interface.cc  towr_ros_interface2.cc  towr_ros_interface_seq.cc  towr_user_interface.cc
(+8 files in other folders)
