<?xml version="1.0"?>
<package format="2">
  <name>towr_gui_kivy</name>
  <version>0.0.0</version>
  <description>KIVY GUI for TOWR</description>

  <maintainer email="jkim3662@gatech.edu">Jeonghwan Kim</maintainer>


  <license>BSD</license>
  <!-- For custom msgs -->
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- For custom msgs -->
  <depend>xpp_states</depend>
  <depend>xpp_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
